# swagger_api/api/swagger/swagger.yaml
@@ -98,6 +98,23 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /eth/getAllAccounts:
+    post:
+      tags: 
+        - info
+      description: "Gibt alle account adresse zurück"
+      operationId: "getAllAccounts"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/accountSchema"          
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      x-swagger-router-controller: "info_controller"
   /eqcontract/getCosts:
     # binds a127 app logic to a route
     x-swagger-router-controller: info_controller
@@ -395,6 +412,12 @@ definitions:
     properties:
       costs:
         type: number
+  accountSchema:
+    properties:
+      accounts:
+        type: array
+        items:
+          type: string
       
         
   
